--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 	<link rel="icon" href="" />
 	<link rel="stylesheet" href="">
 
-	<!--Metas Facebook-->
+	<!--Meta Facebook-->
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:url" content="">
 	<meta property="og:title" content="">
@@ -44,7 +44,7 @@
 	<meta property="article:tag" content="">
 	<meta property="article:published_time" content="">
 
-	<!--Metas Twitter-->
+	<!--Meta Twitter-->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@twitter">
 	<meta name="twitter:title" content="">
@@ -76,6 +76,7 @@
 	</script>
 
 
+	<!-- Content -->
 	<header>
 	    <nav>
 	        <ul>
